# stofs-event-dashboard

./: .gitignore  README.md  TESTING.md  alberto_2024.conf  annotated.conf  debby_2024.conf  helene_2024.conf  milton_2024.conf  process_test_2025.sh  pyproject.toml  requirements.txt  requirements_pip_venv_freeze.txt  run_tests.py  test_2025.conf
data/tests/check_2025/: map_data.gpkg
data/tests/check_2025/cwl/forecast_20250303T1200/stofs_2d_glo/: nos_8735180.parquet  nos_8735391.parquet  nos_8736897.parquet  nos_8737048.parquet  nos_8737138.parquet
data/tests/check_2025/cwl/forecast_20250303T1200/stofs_3d_atl/: nos_8735180.parquet  nos_8736897.parquet  nos_8737048.parquet  nos_8737138.parquet
data/tests/check_2025/cwl/nowcast/stofs_2d_glo/: nos_8735180.parquet  nos_8735391.parquet  nos_8736897.parquet  nos_8737048.parquet  nos_8737138.parquet
data/tests/check_2025/cwl/nowcast/stofs_3d_atl/: nos_8735180.parquet  nos_8736897.parquet  nos_8737048.parquet  nos_8737138.parquet
data/tests/check_2025/cwl/obs/: nos_8735180.parquet  nos_8735523.parquet  nos_8736897.parquet  nos_8737048.parquet  nos_8737138.parquet  nos_8738043.parquet  nos_8739803.parquet
data/tests/check_2025/pressure/forecast_20250303T1200/stofs_2d_glo/: nos_8734383.parquet  nos_8734536.parquet  nos_8735180.parquet  nos_8736163.parquet  nos_8736897.parquet  nos_8737048.parquet
data/tests/check_2025/pressure/forecast_20250303T1200/stofs_3d_atl/: nos_8734383.parquet  nos_8734536.parquet  nos_8735180.parquet  nos_8736163.parquet  nos_8736897.parquet  nos_8737005.parquet  nos_8737048.parquet
data/tests/check_2025/pressure/nowcast/stofs_2d_glo/: nos_8734383.parquet  nos_8734536.parquet  nos_8735180.parquet  nos_8736163.parquet  nos_8737005.parquet  nos_8737048.parquet
data/tests/check_2025/pressure/nowcast/stofs_3d_atl/: nos_8734383.parquet  nos_8734536.parquet  nos_8735180.parquet  nos_8736163.parquet  nos_8736897.parquet  nos_8737005.parquet  nos_8737048.parquet
data/tests/check_2025/pressure/obs/: nos_8734383.parquet  nos_8735180.parquet  nos_8736897.parquet  nos_8737048.parquet
data/tests/check_2025/wind/forecast_20250303T1200/stofs_2d_glo/: nos_8734383.parquet  nos_8734536.parquet  nos_8735180.parquet  nos_8736163.parquet  nos_8737005.parquet  nos_8737048.parquet
data/tests/check_2025/wind/forecast_20250303T1200/stofs_3d_atl/: nos_8734383.parquet  nos_8734536.parquet  nos_8735180.parquet  nos_8736163.parquet  nos_8736897.parquet  nos_8737005.parquet  nos_8737048.parquet
data/tests/check_2025/wind/nowcast/stofs_2d_glo/: nos_8734383.parquet  nos_8734536.parquet  nos_8735180.parquet  nos_8736163.parquet  nos_8736897.parquet  nos_8737048.parquet
data/tests/check_2025/wind/nowcast/stofs_3d_atl/: nos_8734383.parquet  nos_8734536.parquet  nos_8735180.parquet  nos_8736163.parquet  nos_8736897.parquet  nos_8737005.parquet  nos_8737048.parquet
data/tests/check_2025/wind/obs/: nos_8734383.parquet  nos_8735180.parquet  nos_8736897.parquet
src/stofs_event_dashboard/: __init__.py  dashboard_reactive.py  map_data.py  models.py  process_event_data.py  space_time_bounds.py  station_obs.py  write_output.py
stofs-event-dashboard/: _STOFS.py  dashboard.py  dashboard_mss.py  dashboard_reactive.py  helene_example.py  map_data.py  milton_example.py  models.py  process-event-data.py  space_time_bounds.py  static_map.py  station_model.py  station_obs.py  stofs_run.py  test_map_callback.py  write_output.py  write_parquet.py
tests/: test_basic.py  test_check_data.py  test_dashboard.py  test_process_event_data.py
