[project]
name = "stofs-event-dashboard"
version = "0.1.0"
description = "Collect and display STOFS model and observation data."
authors = [
    {name = "Jack Reeves Eyre",email = "jack.reeveseyre@noaa.gov"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12,<4.0"
dependencies = [
    "bokeh (>=3.7.3,<3.8.0)",
    "Cartopy (>=0.24.1,<0.25.0)",
    "datashader (>=0.18.1,<0.19.0)",
    "decorator (>=5.2.1,<5.3.0)",
    "distributed (>=2025.5.1,<2026.0.0)",
    "eccodes (>=2.42.0,<2.43.0)",
    "erddapy (>=2.2.4,<2.3.0)",
    "folium (>=0.20.0,<0.21.0)",
    "geopandas (>=1.1.1,<1.2.0)",
    "geoviews (>=1.14.0,<1.15.0)",
    "h5py (>=3.14.0,<3.15.0)",
    "holoviews (>=1.21.0,<1.22.0)",
    "hvplot (>=0.11.3,<0.12.0)",
    "matplotlib (>=3.10.3,<3.11.0)",
    "panel (>=1.7.3,<2.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "pyextremes (>=2.3.3,<2.4.0)",
    "pyproj (>=3.7.1,<3.8)",
    "pyshp (>=2.3.1,<2.4.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "sealens @ git+https://github.com/oceanmodeling/sealens.git",
    "seanode @ git+ssh://git@github.com/oceanmodeling/seanode.git",
    "searvey @ git+ssh://git@github.com/oceanmodeling/searvey.git@fix-coops-normalize",
    "seastats @ git+https://github.com/oceanmodeling/seastats.git",
    "stormevents",
    "thalassa (>=0.4.5,<0.5.0)",
    "typepigeon (>=1.1.1,<1.2.0)",
    "tzdata (>=2025.2,<2026.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
